log/build_2024-12-06_13-31-19/dc_motor/stderr.log
  File "/home/cheng/DC_motor/install/dc_motor/lib/python3.10/site-packages/dc_motor/state_control.py", line 56
    if abs(self.current_position - self.target_position) < 1e-1 # or current_time >= target_time:  # 允许微小误差或时间到达
                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected ':'

